[package]
name = "process-killer"
version = "0.2.0"
authors = ["Henrik Nygren <nygrenh@gmail.com>"]
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.13.1"               # Library to get system information such as processes, processors, disks, components and network…
clap = "~2.33.0"                 # A simple to use, efficient, and full-featured Command Line Argument Parser
regex = "1.3.7"                  # An implementation of regular expressions for Rust. This implementation uses finite automata an…
